# tp-nlp

./: README.md  pyproject.toml
data/: Beanstalk.txt
src/: Beanstalk.txt  lemm_words.py  main.py
