[tool.poetry]
name = "tp-nlp"
version = "0.0.1"
description = "The first Text Processor practice"
authors = ["Asncodes-80 <asn80.asn@hotmail.com>"]
license = "GPL3"

[tool.poetry.dependencies]
python = "^3.9"
nltk = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=-1.0.0"]
build-backend = "poetry.core.masonry.api"
